fixed horizontal scroll

--- a/mobile.css
+++ b/mobile.css
@@ -771,7 +771,7 @@
     
     .fixed_nav nav img, 
     .fixed_nav .social img{
-        width: 18%;
+        width: 20%;
     }    
     
     
